(Fixes #4). Show section numbers behind tiles

--- a/junimoji.css
+++ b/junimoji.css
@@ -16,8 +16,9 @@ div#container {
   flex-flow: row wrap;
   width: 615;
   height: 615;
-  background-image: url('./background.jpg');
-  background-size: cover;
+  /* background-image: url('./background.jpg'); */
+  /* background-size: cover; */
+  background-color: rgba(25,25,25,0.2);
 }
 
 div.section {
@@ -29,12 +30,15 @@ div.section {
 }
 
 div.section span {
-  color: rgba(100,100,200, 0.3);
+  color: rgba(100,100,125, 0.3);
   margin-top: -200px;
   z-index: -1;
   vertical-align: middle;
   text-align: center;
-  padding-left: 50px;
+  font-size: 150px;
+  text-align: center;
+  width: 200px;
+  font-weight: 900;
 }
 
 
